User-list overflow fixed

--- a/frontend/src/app/components/basic/user-list/user-list.component.scss
+++ b/frontend/src/app/components/basic/user-list/user-list.component.scss
@@ -6,8 +6,6 @@
 
 .user-list {
   height: 100%;
-  width: 400px;
-  overflow: auto;
 }
 
 .mat-card-header .mat-card-title {
